完善大body输出的处理逻辑